- Изменения под русский текст - Добавлены статьи с предыдущей версии блога

--- a/_config.yml
+++ b/_config.yml
@@ -8,40 +8,43 @@
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 #--------------------------
 
-title: Chirpy                          # the main title
+title: Svirex's Blog                          # the main title
 
-tagline: A text-focused Jekyll theme.  # it will display as the sub-title
+tagline: Личный блог со всякой всячиной  # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, portfolio, sidebar,
-  bootstrap Jekyll theme with responsive web design
-  and focuses on text presentation.
+  Личный блог Артёма Воробьёва aka svirex
 
 # Replace with the website url, e.g. 'https://username.github.io'
 url: 'protocol://domain'
 
-author: your_full_name                  # change to your full name
+author: Артём Воробьёв                  # change to your full name
 
-avatar: /assets/img/sample/avatar.jpg   # support internet resources
+avatar: /assets/img/sample/avatar-2024924_640.png   # support internet resources
 
 github:
-  username: github_username             # change to your github username
+  username: svirex             # change to your github username
 
-twitter:
-  username: twitter_username            # change to your twitter username
+# twitter:
+#   username: twitter_username            # change to your twitter username
+telegram:
+  username: svirex
+
+youtube:
+  username: svirex
 
 social:
-  name: your_full_name                  # it will shows as the copyright owner in Footer
-  email: example@doamin.com             # change to your email address
+  name: Артём Воробьёв                  # it will shows as the copyright owner in Footer
+  email: svirex@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    # - https://twitter.com/username      # change to your twitter homepage
+    - https://github.com/svirex       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: google_meta_tag_verification # change to your verification string
+# google_site_verification: google_meta_tag_verification # change to your verification string
 
 #--------------------------
 
@@ -49,7 +52,7 @@ google_site_verification: google_meta_tag_verification # change to your verifica
 baseurl: ''
 
 # Change to your timezone › http://www.timezoneconverter.com/cgi-bin/findzone/findzone
-timezone: Asia/Shanghai
+timezone: Europe/Samara
 
 google_analytics:
   # Fill with your Google Analytics ID
@@ -65,8 +68,8 @@ google_analytics:
     cache: false  # pv data local cache, good for the users from GFW area.
 
 disqus:
-  comments: false  # boolean type, the global switch for posts comments.
-  shortname: ''    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
+  comments: true  # boolean type, the global switch for posts comments.
+  shortname: 'svirexblog'    # Fill with your Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
 
 
 # Prefer color scheme setting, available values:
@@ -115,7 +118,7 @@ defaults:
       location: Post
       breadcrumb:
         -
-          label: Posts
+          label: Записи
           url: /
   -
     scope:
@@ -130,10 +133,10 @@ defaults:
       location: Tag
       breadcrumb:
         -
-          label: Home
+          label: Главная
           url: /
         -
-          label: Tags
+          label: Теги
           url: /tabs/tags/
   -
     scope:
@@ -143,10 +146,10 @@ defaults:
       location: Category
       breadcrumb:
         -
-          label: Home
+          label: Главная
           url: /
         -
-          label: Categories
+          label: Категории
           url: /tabs/categories/
   -
     scope:
@@ -156,7 +159,7 @@ defaults:
       dynamic_title: true    # Hide title in mobile screens.
       breadcrumb:
         -
-          label: Home
+          label: Главная
           url: /
   -
     scope:
