--- a/_data/share.yml
+++ b/_data/share.yml
@@ -6,21 +6,25 @@
 #  © 2020 Cotes Chung
 #  MIT Licensed
 
-label: "Share"
+label: "Поделиться"
 
 platforms:
   -
     type: Twitter
     icon: "fab fa-twitter"
     link: "https://twitter.com/intent/tweet?text=TITLE&url=URL"
-  -
-    type: Facebook
-    icon: "fab fa-facebook-square"
-    link: "https://www.facebook.com/sharer/sharer.php?title=TITLE&u=URL"
+  # -
+  #   type: Facebook
+  #   icon: "fab fa-facebook-square"
+  #   link: "https://www.facebook.com/sharer/sharer.php?title=TITLE&u=URL"
   -
     type: Telegram
     icon: "fab fa-telegram"
     link: "https://telegram.me/share?text=TITLE&url=URL"
+  -
+    type: VK
+    icon: "fab fa-vk"
+    link: "https://vkontakte.ru/share.php?title=TITLE&url=URL"
 
   # Uncomment below if you need to.
   # -
