--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description: >-                        # used by seo meta and the atom feed
   Личный блог Артёма Воробьёва aka svirex
 
 # Replace with the website url, e.g. 'https://username.github.io'
-url: 'protocol://domain'
+url: 'https://svirex.github.io'
 
 author: Артём Воробьёв                  # change to your full name
 
