[Automation] Updated the Lastmod for post(s).

--- a/_data/updates.yml
+++ b/_data/updates.yml
@@ -1,9 +1,12 @@
 -
   filename: 'assistant-register-and-auth'
-  lastmod: '2021-04-06 22:56:54 +0400'
+  lastmod: '2021-04-06 23:03:47 +0400'
+-
+  filename: 'assistant-refactor-auth'
+  lastmod: '2021-04-06 23:03:47 +0400'
 -
   filename: 'start-assitant'
-  lastmod: '2021-04-06 22:56:54 +0400'
+  lastmod: '2021-04-06 23:03:47 +0400'
 -
   filename: 'write-sandbox-day-010'
   lastmod: '2020-05-21 14:39:29 +0400'
